--- a/BaiThucHanh03/TH3.css
+++ b/BaiThucHanh03/TH3.css
@@ -13,26 +13,40 @@ body{
     text-align:center;
     padding:20px;
 }
+nav {
+    display: flex;
+    justify-content:center;
+    align-items:center;
+    gap: 20px;
+    background:#f8f9fa;
+    padding:15px;
+}
 .nav-link {
     color:rgb(3, 3, 3);
-    text-decoration:none;
     padding: 10px 15px;
-    display:inline-block;
     margin: 0 10px;  
+    text-decoration: none;
     border-radius: 20px;
-    border: 2px solid rgb(6, 1, 148);
+    border: 2px solid rgb(199, 199, 203);
 }
+nav a:hover {
+    color:#ff6600;
+    font-weight: 800;
+}
+
 .posts{
+    display: flex;
+    flex-wrap: wrap;
     text-align: center;
-    margin: 0 auto;
-    width:auto;
+    justify-content:center;
+    gap: 20px;
+    max-width: 1200px;
+    margin: 40px auto;
 }
 .card{
-        width: 30% ;
-        display: inline-block;
+        flex: 0 0 calc(33.33%-20px);
         border: 1px solid #ddd;
         padding: 20px;
-        margin: 10px;
         background: white;
         border-radius: 8px;
 }
@@ -50,15 +64,12 @@ body{
 h1,h2,h3 {
     font-family:'inter',serif;
 }
-/* nav a {
-    display:inline-block;
-    margin: 0 10px;   
-    
-    border-radius: 20px;
-    border: 2px solid rgb(6, 1, 148);
-   
-} */
-a:hover {
-    color:#ff6600;
-    background-color: #eee;
+@media(max-width: 768px){
+    .posts{
+        flex-direction:column;
+        align-items: center;
+    }
+    .card{
+        flex:  1 1 100%;
+    }
 }
